# Web-Scraping

./: can.ipynb  pyproject.toml  scraper.py  test_web_scraper.py
web_scraper/: web_scraper.py
